                                     Xbox Media Center CHANGELOG
************************************************************************************************************* 
*************************************************************************************************************

added/fixed: (dd-mm-yyyy) (please specify date in CET)
 - 22-05-2006 fixed: dvdplayer wouldn't set language based on xbmc language settings as it should
 - 22-05-2006 fixed: inverted dvd highlights. spu used for background and selected is totaly transparent
 - 22-05-2006 fixed: Thumb issues with thumbs popping up on parent items, and not showing up for some stacked items.
 - 22-05-2006 fixed: A few minor directory history issues with the new My Programs system.
 - 21-05-2006 removed: <home> tag from XBoxMediaCenter.xml

******************************************************************************
* YOU MUST NOW USE A SHORTCUT XBE (SEE THE INCLUDED ONE) TO RUN XBMC AS DASH *
******************************************************************************

 - 21-05-2006 changed: removed duplicated samba options in xboxmediacenter.xml and moved samba clienttimeout and doscodepage to AdvancedSettings.xml
 - 21-05-2006 changed: rewrote network init and retrieval of current ip/subnet...
 - 21-05-2006 changed: Initial commit of new My Programs system (more in line with the other categories.)  Test via specifying <newmyprograms>true</newmyprograms> in AdvancedSettings.xml
 - 21-05-2006 fixed: [ 1492281 ] Some video thumbnails aren't loading
 - 21-05-2006 changed: Moved "Allow file operations", "Unroll RAR Archives" and "Ignore The When Sorting" to the global File Lists settings (under Appearance).  Removed the Video OSD timeout setting, the Low quality renderer option and the "Enlarge VobSubs" option.
 - 21-05-2006 fixed: AM/PM switched in time display
 - 20-05-2006 fixed: Startup window setting was broken.
 - 19-05-2006 updated: French language file